--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: 	Academic (Flagship Style)
+Theme Name: 	Academic (Open Style)
 Description: 	For academic departments
 Author: 		Cara Peckens
 Author URI: 	http://krieger.jhu.edu/communications/web
